--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   pandasai-app:
     image: pandasai-app
-    build: ./app
+    build: ./
     command: streamlit run pandasai_app/main.py
     volumes:
       - ./pandasai_app/:/app/pandasai_app
